Avoid NPE in cleanup of work directory